# pyVAMDC

./: .gitignore  CLI.md  CLI2.md  CLI2_TEST_REPORT.md  CLI_GUIDE.md  CLI_SUMMARY.md  CLI_TEST_REPORT.md  Dockerfile  Licence.txt  QUICK_START.md  README.md  cli.py  docker.sh  pyproject.toml  setup.py  slap2.tex
XSAMS/: ._test.html
radex/: config.py  logger.py  radex.py
skill/: SKILL.md
skill/references/: parameter_guide.md
spectral/: __main__.py  cli.py  cli2.py  energyConverter.py  filters.py  lines.py  logging_config.py  slap.py  species.py  vamdcQuery.py
tests/: test.py  test_radex.py  test_slap.py
xsl/: atomicxsams2html.xsl  molecularxsams2html.xsl
